--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,15 +19,15 @@
   	--tr-X: calc(var(--btn-w) - var(--dot-w));
 }
 
-.test-board-blue {
+.test-border-blue {
 	border: 3px solid #00f;
 }
 
-.test-board-red {
+.test-border-red {
 	border: 3px solid #f00;
 }
 
-.test-board-green {
+.test-border-green {
 	border: 3px solid #0f0;
 }
 
@@ -238,7 +238,7 @@
 	position: relative;
 	margin-top: 800px; /* first-row + second-row height */
 	width: 100vw;
-	height: 5800px; /** main-content-height 매우 중요 */
+	height: 5550px; /** main-content-height 매우 중요 */
 
 	display: flex;
 	justify-content: center;
@@ -634,7 +634,7 @@
 
   /** main - 영화, 도서, 음악 등 컨첸츠 list 영역 */
   .main-container .main-content .main-page .main-page-content {
-	height: 3500px;
+	height: 3200px;
 	background-color: var(--background-color);
 
 	display: flex;
@@ -1085,6 +1085,109 @@ z-index: 0;
 .main-page-content-movie-box .main-page-content-box-content .list .mainPage-content-box.movie .imgBx img {
 	width: 200px;
 	height: 300px;
+}
+
+
+/** 자주하는 질문 */
+.main-page .content-faq {
+	margin-top: 30px;
+	width: 100%;
+	height: 600px;
+}
+
+.main-page .content-faq .faq-box {
+	width: 100%;
+	height: 100%;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
+	align-items: center;
+}
+
+.main-page .content-faq .faq-box .faq-list {
+	width: 60%;
+	height: 100%;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: center;
+}
+
+.main-page .content-faq .faq-box .faq-list .faq-item {
+	position: relative;
+	width: 80%;
+	height: 70px;
+
+	margin: 10px;
+	padding: 10px;
+	background-color: var(--black-color);
+	color: #fff;
+
+	border: 1px #000 solid;
+	border-radius: 15px;
+
+
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
+	align-items: center;
+
+	cursor: pointer;
+	transition: 0.5s ease-in-out;
+}
+
+.main-page .content-faq .faq-box .faq-list .faq-item:hover {
+	margin-bottom: 100px;
+	background-color: #5D5D5D;
+	color: #fff;
+	transition: 0.5s ease-in-out;
+}
+
+.main-page .content-faq .faq-box .faq-list .faq-item .iqon {
+	margin: 0 20px;
+	width: 30px;
+	height: 30px;
+	background-image: url('./icon/faq.png');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.main-page .content-faq .faq-box .faq-list .faq-item .title {
+	font-size: 25px;
+	font-weight: bold;
+	vertical-align: middle;
+
+	
+	font-size: 30px;
+	font-weight: bold;
+}
+
+.main-page .content-faq .faq-box .faq-list .faq-item .content {
+	position: absolute;
+	top: 90px;
+	left: 0;
+
+	display: none;
+	transition: 0.5s ease-in-out;
+
+	padding: 20px;
+
+	border-radius: 15px;
+	background-color: #2D2D2D;
+	width: 100%;
+
+	font-size: 15px;
+	font-weight: bold;
+
+	transition: 0.5s ease-in-out;
+}
+
+.main-page .content-faq .faq-box .faq-list .faq-item:hover .content {
+	display: block;
+	transition: 0.5s ease-in-out;
 }
 
 
