--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1101,7 +1101,7 @@ z-index: 0;
 
 	display: flex;
 	flex-direction: row;
-	justify-content: start;
+	justify-content: center;
 	align-items: center;
 }
 
