--- a/src/css/style.css
+++ b/src/css/style.css
@@ -256,13 +256,10 @@
 .main-top-video section {
 	position: relative;
 	z-index: 2;
-}
 
-section {
-	width: 100%;
+	width: 100vw;
 	height: 100vh;
 }
-
 
 .main-top-video section .main-top-banner-text {
 	position: relative;
@@ -275,8 +272,36 @@ section {
 
 	z-index: 2;
 }
+
+
 .main-top-video section.action .main-top-banner-text {
 	opacity: 1;
+	transition: 0.5s;
+}
+
+
+.main-top-video section.action .main-top-banner-text.section-second {
+	margin-top:50vh;
+	
+}
+
+.main-top-video section.action .main-top-banner-text.section-second span {
+	font-size: 40px;
+	font-weight: bold;
+}
+
+.main-top-video section.action .main-top-banner-text.section-second span.second-text {
+	margin-top: 20px;
+	margin-left: 100px;
+
+	font-size: 30px;
+	font-weight: bold;
+}
+
+.main-top-video section.action .main-top-banner-text.section-second span.second-title {
+	font-size: 50px;
+	font-weight: bold;
+	color: var(--red-color);
 }
 
 /** main content 영역*/
