--- a/src/css/style.css
+++ b/src/css/style.css
@@ -184,7 +184,7 @@ html {
 	top:0;
 	left:0;
 	width: 100vw;
-	height: 400vh;
+	height: 300vh;
 	background-color: #000;
 }
 
@@ -215,6 +215,8 @@ html {
 	color: #fff;
 
 	z-index: 2;
+	transition: 1s;
+	transform: translateY(0);
 }
 
 
@@ -224,12 +226,12 @@ html {
 }
 
 /** 첫 번째 광고 문구*/
-.main-top-video section.action .main-top-banner-text.section-first {
+.main-top-video section .main-top-banner-text.section-first {
 	margin-top:40vh;
 	
 }
 
-.main-top-video section.action .main-top-banner-text.section-first span {
+.main-top-video section .main-top-banner-text.section-first span {
 	display: inline-block;
 	font-size: 48px;
 	line-height: 1.171875;
@@ -239,40 +241,64 @@ html {
 	font-weight: bold;
 }
 
-.main-top-video section.action .main-top-banner-text.section-first span.second-text {
+.main-top-video section .main-top-banner-text.section-first span.second-text {
 	margin-top: 20px;
 
 	font-size: 50px;
 	font-weight: bold;
 }
 
-.main-top-video section.action .main-top-banner-text.section-first span.second-title {
+.main-top-video section .main-top-banner-text.section-first span.second-title {
 	font-size: 150px;
 	font-weight: bold;
 	color: var(--red-color);
 }
 
-.main-top-video section.action .main-top-banner-text.section-second {
+.main-top-video section .main-top-banner-text.section-second {
 	margin-top: 40vh;
 
 	text-align: right;
 }
 
-.main-top-video section.action .main-top-banner-text.section-second span.first-text {
+.main-top-video section .main-top-banner-text.section-second span.first-text {
 	font-size: 40px;
 	line-height: 1.171875;
 	word-break: keep-all;
 	letter-spacing: -0.02em;
 }
 
-.main-top-video section.action .main-top-banner-text.section-second span.second-text {
+.main-top-video section .main-top-banner-text.section-second span.second-text {
 	font-size: 40px;
 	line-height: 1.171875;
 	word-break: keep-all;
 	letter-spacing: -0.02em;
 }
 
-.main-top-video section.action .main-top-banner-text.section-second span.third-text {
+.main-top-video section .main-top-banner-text.section-second span.third-text {
+	font-size: 40px;
+	line-height: 1.171875;
+	word-break: keep-all;
+	letter-spacing: -0.02em;
+}
+
+.main-top-video section .main-top-banner-text.section-third {
+	margin-top: 40vh;
+}
+
+.main-top-video section .main-top-banner-text.section-third span.first-text {
+	font-size: 50px;
+	line-height: 1.171875;
+	word-break: keep-all;
+	letter-spacing: -0.02em;
+}
+
+.main-top-video section .main-top-banner-text.section-third span.second-title {
+	font-size: 60px;
+	font-weight: bold;
+	color: var(--red-color);
+}
+
+.main-top-video section .main-top-banner-text.section-third span.second-text {
 	font-size: 40px;
 	line-height: 1.171875;
 	word-break: keep-all;
