--- a/src/css/style.css
+++ b/src/css/style.css
@@ -874,27 +874,49 @@ html {
 	cursor: pointer;
 }
 
-
 .mainPage-content-item.music .mainPage-content-item-over .imgBx {
-	margin-top: 20px;
+	margin-top: 30px;
 	width: 200px;
 	height: 200px;
 
 	opacity: 0;
+	transition: 1s ease;
 }
 
-.mainPage-content-item.music .mainPage-content-item-over .imgBx {
-	margin-top: 20px;
+.mainPage-content-item.music .mainPage-content-item-over .imgBx img {
 	width: 200px;
 	height: 200px;
-	opacity: 0;
+	transform: scale(0.5);
+	transition: 1s ease;
 }
+
 .mainPage-content-item-over .img-area {
-	margin-top: 20px;
+	margin: 20px 0;
 	width: 200px;
 	height: 200px;
+}
 
-	opacity: 0;
+.mainPage-content-item-over .img-area img {
+	transform: scale(0.5);
+	width: 150px;
+	height: 150px;
+}
+
+.mainPage-content-item-over .img-area {
+	width: 150px;
+	height: 150px;
+
+	margin-bottom: 20px;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+.mainPage-content-item-over .img-area img {
+	width: 150px;
+	height: 150px;
 }
 
 /** 2.0 version Music List - hover 영역**/
@@ -924,24 +946,25 @@ html {
 }
 
 .mainPage-content-item.music .mainPage-content-item-hover .imgBx {
-	margin-top: 20px;
+	margin-top: 30px;
 	width: 200px;
 	height: 200px;
 
 }
 
 .mainPage-content-item-hover .imgBx img {
-	width: 100%;
-	height: 100%;
+	width: 200px;
+	height: 200px;
 
 	opacity: 1;
+	transform: scale(1);
 	transition: 1s ease;
 
 }
 
 .mainPage-content-item-hover .content {
 
-	margin: 15px 0 10px 0;
+	margin: 15px 0 60px 0;
 	width: 100%;
 	height: 30px;
 
@@ -965,7 +988,7 @@ html {
 	width: 150px;
 	height: 150px;
 
-	margin-top: 70px;
+	margin-bottom: 20px;
 
 	display: flex;
 	flex-direction: row;
@@ -976,8 +999,8 @@ html {
 }
 
 .mainPage-content-item-hover .img-area img {
-	width: 100%;
-	height: 100%;
+	width: 150px;
+	height: 150px;
 }
 
 
