--- a/src/css/style.css
+++ b/src/css/style.css
@@ -705,7 +705,7 @@ html {
 
   /** main - 영화, 도서, 음악 등 컨첸츠 list 영역 */
   .main-container .main-content .main-page .main-page-content {
-	height: 3200px;
+	height: 400vh;
 	background-color: var(--background-color);
 
 	display: flex;
@@ -718,7 +718,7 @@ html {
   .main-container .main-content .main-page .main-page-content .main-page-content-box {
 	
 	width: 100%;
-	height: 800px;
+	height: 100vh;
 
 	display: flex;
 	flex-direction: column;
