--- a/src/css/style.css
+++ b/src/css/style.css
@@ -310,7 +310,7 @@ html {
 .main-container .main-content {
 	position: relative;
 	width: 100vw;
-	height: 5550px; /** main-content-height 매우 중요 */
+	height: calc(400vh + 1300px); /** main-content-height 매우 중요 */
 
 	display: flex;
 	justify-content: center;
@@ -1083,7 +1083,7 @@ z-index: 0;
 	background-repeat: no-repeat;
 
 	width: 100%;
-	height: 800px;
+	height: 100vh;
 
 	display: flex;
 	flex-direction: column;
@@ -1110,7 +1110,7 @@ z-index: 0;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 600px;
+	height: 60vh;
 }
 
 .main-page-content-movie-box .screen iframe {
@@ -1120,7 +1120,7 @@ z-index: 0;
 
 .main-page-content-movie-box .main-page-content-box-content {
 	width: 100%;
-	height: 100%;
+	height: 40vh;
 
 	display: flex;
 	flex-direction: row;
