Update: 페이지 안쪽, style 수정

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1056,8 +1056,23 @@ opacity: 0.4;
 }
 
 .main-page-content-box.book .main-page-content-box-content .list .mainPage-content-box.book .page:nth-child(2) {
-z-index: 0;
+	z-index: 0;
+	padding: 20px;
 }
+
+.main-page-content-box.book .main-page-content-box-content .list .mainPage-content-box.book .page:nth-child(2) h2 {
+	font-size: 30px;
+	font-weight: bold;
+	height: 50px;
+	margin-bottom: 50px;
+}
+
+.main-page-content-box.book .main-page-content-box-content .list .mainPage-content-box.book .page:nth-child(2) span {
+	border: 1px blue solid;
+	font-size: 15px;
+	font-weight: bold;
+}
+
 
 
 
