--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -796,6 +796,116 @@
  
 
 
+/** 2.0 version Music List - hover 영역**/
+.mainPage-content-item.music.action .mainPage-content-hoverItem {
+	
+	position: relative;
+	top: -450px;
+	left: 0;
+	width: 300px;
+	height: 500px;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	background-color: #fff;
+
+	border-radius: 10px;
+	box-shadow: 0 0 15px #000,
+	0 0 30px #000;
+	opacity: 0.9;
+
+	transform: scale(1);
+	transition: 1s ease;
+	cursor: pointer;
+	z-index: 10;
+}
+
+.mainPage-content-item.music.action .mainPage-content-hoverItem .imgBx {
+	margin-top: 30px;
+	width: 200px;
+	height: 200px;
+
+	opacity: 1;
+	transition: 1s ease;
+
+}
+.mainPage-content-item.music.action .mainPage-content-hoverItem .imgBx img {
+	width: 200px;
+	height: 200px;
+	transform: scale(1);
+	transition: 1s ease;
+	opacity: 1;
+}
+
+.mainPage-content-item.music.action .content {
+
+	margin: 15px 0 10px 0;
+	width: 100%;
+	height: 30px;
+
+	font-size: 30px;
+	font-weight: bold;
+	display: flex;
+}
+
+.mainPage-content-item.music.action .imgBx img {
+	width: 200px;
+	height: 200px;
+
+	opacity: 1;
+	transform: scale(1);
+	transition: 1s ease;
+
+}
+
+.mainPage-content-item.music.action .mainPage-content-hoverItem .content {
+
+	margin: 15px 0 10px 0;
+	width: 100%;
+	height: 30px;
+
+	font-size: 30px;
+	font-weight: bold;
+	display: flex;
+}
+
+.mainPage-content-item.music.action .mainPage-content-hoverItem .content .title {
+	width: 100%;
+	height: 100%;
+
+	padding-left: 45px;
+
+}
+
+
+
+
+.mainPage-content-item.music.action .mainPage-content-hoverItem .img-area {
+	width: 200px;
+	height: 200px;
+
+	margin-bottom: 20px;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+
+	opacity: 1;
+	transition-delay: 0.5s;
+}
+
+.mainPage-content-item.music.action .mainPage-content-hoverItem .img-area img {
+	width: 200px;
+	height: 200px;
+
+	opacity: 1;
+}
+
+
 
 
 /** 2.0 version Music List**/
@@ -858,6 +968,26 @@
 	transition: 1s ease;
 }
 
+.mainPage-content-item.music .mainPage-content-hoverItem .content {
+
+	margin: 15px 0 10px 0;
+	width: 100%;
+	height: 30px;
+
+	font-size: 30px;
+	font-weight: bold;
+	display: flex;
+}
+
+.mainPage-content-item.music .mainPage-content-hoverItem .content .title {
+	width: 100%;
+	height: 100%;
+
+	padding-left: 45px;
+
+}
+
+
 .mainPage-content-hoverItem .img-area {
 	margin: 20px 0;
 	width: 200px;
@@ -886,91 +1016,6 @@
 	width: 150px;
 	height: 150px;
 }
-
-/** 2.0 version Music List - hover 영역**/
-.mainPage-content-item.music.action .mainPage-content-hoverItem {
-	
-	position: relative;
-	top: -450px;
-	left: 0;
-	width: 300px;
-	height: 500px;
-
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-
-	background-color: #fff;
-
-	border-radius: 10px;
-	box-shadow: 0 0 15px #000,
-	0 0 30px #000;
-	opacity: 0.9;
-
-	transition: 1s ease;
-	cursor: pointer;
-	z-index: 10;
-}
-
-.mainPage-content-item.music.action .mainPage-content-hoverItem .imgBx {
-	margin-top: 30px;
-	width: 200px;
-	height: 200px;
-
-}
-
-.mainPage-content-item.music.action .imgBx img {
-	width: 200px;
-	height: 200px;
-
-	opacity: 1;
-	transform: scale(1);
-	transition: 1s ease;
-
-}
-
-.mainPage-content-item.music.action .content {
-
-	margin: 15px 0 60px 0;
-	width: 100%;
-	height: 30px;
-
-	font-size: 30px;
-	font-weight: bold;
-	display: flex;
-}
-
-.mainPage-content-item.music.action .mainPage-content-hoverItem .content .title {
-	width: 100%;
-	height: 100%;
-
-	padding-left: 45px;
-
-}
-
-
-
-
-.mainPage-content-item.music.action .mainPage-content-hoverItem .img-area {
-	width: 150px;
-	height: 150px;
-
-	margin-bottom: 20px;
-
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-
-	transition-delay: 0.5s;
-}
-
-.mainPage-content-item.music.action .mainPage-content-hoverItem .img-area img {
-	width: 150px;
-	height: 150px;
-}
-
 
 
 /* Game BackGround**/
