--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -103,27 +103,34 @@
 	border: 3px solid transparent;
 }
 
-.main-content .back-area {
+
+
+/* .main-content .back-area {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 1;
+    overflow: hidden;
+    clip-path: inset(0);
+} */
+
+.main-content .back-area {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
     overflow: hidden;
     clip-path: inset(0);
 }
 
+/* .back-area {
+	position: relative;
 
-.back-area {
 
-	position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-
-	top: 500px;
-	left: 800px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -131,91 +138,20 @@
 	height: 100vh;
 
 	background: #555;
-}
-.background-container {
+} */
 
-    position: fixed;
-    top: 700px;
-    left: 950px;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    pointer-events: none;
-
-	z-index: 3;
-	transform: skewY(-20deg);
-
-	width: 100vw;
-	height: 100%;
-}
-
-.background-container .cube {
-	position: relative;
-	translate: calc(var(--z) * 60px) calc(var(--z) * 60px);
-}
-
-.background-container .cube div {
-	position: absolute;
-	translate: calc(-70px * var(--x)) calc(-70px * var(--y));
-}
-
-.background-container .cube div span {
-	position: relative;
-	display: inline-block;
-	width: 50px;
-	height: 50px;
-	background: #fff;
-	transition: 1.5s;
-}
-
-.background-container .cube div span.active {
-	background: #ef4149;
-	transform: translate(0, -50px);
-	animation: animate 2s ease-in-out infinite;
-}
-
-.background-container .cube div span::before {
-	content: '';
-	position: absolute;
-	left: -40px;
-	width: 40px;
-	height: 100%;
-	background-color: #c8c8c8;
-	transform-origin: right;
-	transform: skewY(45deg);
-	transition: 1.5s;
-}
-
-.background-container .cube div span.active::before {
-	background: #f75d64;
-}
-
-.background-container .cube div span::after {
-	content: '';
-	position: absolute;
-	top: -40px;
+.back-area .background-container {
+	position: fixed;
+	top: 0;
 	left: 0;
-	width: 100%;
-	height: 40px;
-	background: #f2f2f2;
-	transform-origin: bottom;
-	transform: skewX(45deg);
-	transition: 1.5s;
-	box-shadow: -100px 100px 5px rgba(0, 0, 0, 0.15);
-}
-.background-container .cube div span.active::after {
-	background: #f14e55;
-	box-shadow: -150px 150px 5px rgba(0, 0, 0, 0.15);
+	width: 100vw;
+	height: 100vh;
+	z-index: 3;
+	transform: scale(2) translateX(15vw);
+	pointer-events: none;
+
 }
 
-@keyframes animate {
-	0% {
-		filter: hue-rotate(0deg);
-	}
-	100% {
-		filter: hue-rotate(360deg);
-	}
-}
 
 
 
@@ -232,6 +168,9 @@
 .main-container {
 	font-family: 'hana', serif;
 }
+
+
+
 
 
 /** new - 상단 배너 영역 **/
@@ -363,6 +302,8 @@
 }
 
 
+
+
 /** main content 영역*/
 .main-container .main-content {
 	position: relative;
@@ -374,6 +315,9 @@
 	background-color: var(--background-color);
 	overflow: hidden;
 	z-index: 4;
+
+	pointer-events: none;
+	clip-path: inset(0);
 }
 
 .main-container .main-content .main-page {
