--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -146,7 +146,7 @@
 	left: 0;
 	width: 100vw;
 	height: 100vh;
-	z-index: 3;
+	z-index: -1;
 	transform: scale(2) translateX(15vw);
 	pointer-events: none;
 
@@ -155,15 +155,6 @@
 
 
 
-/* .main-container {
-	position: absolute;
-	top:0;
-	left:0;
-	width: 100vw;
-	height: 100vh;
-	background-color: #000;
-	z-index: 1;
-} */
 
 .main-container {
 	font-family: 'hana', serif;
@@ -181,6 +172,7 @@
 	width: 100vw;
 	height: 300vh;
 	background-color: #000;
+	overflow: hidden;
 }
 
 .main-top-video video {
