--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -117,12 +117,12 @@
 } */
 
 .main-content .back-area {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
-    z-index: -1;
+    height: 100%;
+    z-index: 2;
     overflow: hidden;
     clip-path: inset(0);
 }
@@ -182,6 +182,7 @@
 	width: 100vw;
 	height: 100vh;
 	z-index: 1;
+	object-fit: cover;
 }
 
 .main-top-video section {
@@ -308,8 +309,6 @@
 	overflow: hidden;
 	z-index: 4;
 
-	pointer-events: none;
-	clip-path: inset(0);
 }
 
 .main-container .main-content .main-page {
