--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -1199,9 +1199,11 @@ opacity: 0.4;
 
 /** 자주하는 질문 */
 .main-page .content-faq {
-	margin-top: 30px;
+	padding-top: 30px;
 	width: 100%;
 	height: 600px;
+
+	background-color: var(--background-color);
 }
 
 .main-page .content-faq .faq-box {
@@ -1607,6 +1609,6 @@ footer .footer-container .footer-content-btn {
 .footer-container .footer-content-btn div .footer-content-btn-item .footer-content-btn-item-text {
 	margin-left: 10px;
 	font-size: 25px;
-	color: var(--black-color);
+	color: #fff;
 	font-weight: bold;
 }
