--- a/src/pages/admin/AdminMain.css
+++ b/src/pages/admin/AdminMain.css
@@ -40,11 +40,15 @@
     align-items: start;
 
     overflow: hidden;
+    cursor: pointer;
+
+    transition: width 0.3s ease-in-out;
 }
 
 /** 메뉴 열기 */
 .admin-nav.menu-open {
     width: var(--nav-menu-open-width);
+    transition: width 0.3s ease-in-out;
 }
 
 .admin-nav .admin-nav-title {
@@ -102,7 +106,7 @@
 
 .admin-nav .admin-nav-menu-item .admin-nav-menu-item-title {
     width: 75px;
-    height: 50px;
+    height: 55px;
     padding: 5px;
     margin-left: 20px;
 
