--- a/src/pages/admin/component/AdminManager.css
+++ b/src/pages/admin/component/AdminManager.css
@@ -32,6 +32,7 @@
 
 /** 대시보드 첫 번째, 상태 박스*/
 .admin-manager-container .dashboard-first .status-box {
+    position: relative;
     margin: 20px 30px;
     width: 100%;
     height: 100%;
@@ -42,7 +43,7 @@
     justify-content: space-between;
     align-items: start;
 
-    background-color: var(--black-color);
+    
 
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1),
     0 0 10px 10px rgba(0, 0, 0, 0.3),
@@ -51,8 +52,20 @@
     cursor: pointer;
 }
 
-.admin-manager-container .dashboard-first .status-box:hover {
-    background: linear-gradient(to bottom right, var(--black-color), var(--red-color));
+.admin-manager-container .dashboard-first .status-box:nth-child(1) {
+    background: linear-gradient(to bottom right, var(--black-color), var(--red-color) ,red);
+}
+
+.admin-manager-container .dashboard-first .status-box:nth-child(2) {
+    background: linear-gradient(to bottom right, var(--black-color), #7c86b6, blue);
+}
+
+.admin-manager-container .dashboard-first .status-box:nth-child(3) {
+    background: linear-gradient(to bottom right, var(--black-color), #59b678, green);
+}
+
+.admin-manager-container .dashboard-first .status-box:nth-child(4) {
+    background: linear-gradient(to bottom right, var(--black-color), #a04dbb, purple);
 }
 
 .admin-manager-container .dashboard-first .status-box .status-first {
@@ -63,43 +76,62 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
+    
 }
 
 .admin-manager-container .dashboard-first .status-box .icon {
-    margin: 20px 0 0 50px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
     padding: 10px;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
+    width: 30%;
+    height: 30%;
 
-    background-image: url('../../../assets/icon/user-white.png');
-    background-color: rgba(255, 255,255, 0.2);
+    
     background-size: 80% 80%;
     background-repeat: no-repeat;
     background-position: center;
 
-
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 1),
-    inset 0  0 5px 5px rgba(0, 0, 0, 0.4);
 }
 
+.admin-manager-container .dashboard-first .status-box:nth-child(1) .icon {
+    background-image: url('../../../assets/icon/user-white.png');
+}
+.admin-manager-container .dashboard-first .status-box:nth-child(2) .icon {
+    background-image: url('../../../assets/icon/dollar.png');
+}
+.admin-manager-container .dashboard-first .status-box:nth-child(3) .icon {
+    background-image: url('../../../assets/icon/meter.png');
+}
+.admin-manager-container .dashboard-first .status-box:nth-child(4) .icon {
+    background-image: url('../../../assets/icon/tv.png');
+}
+
+
 .admin-manager-container .dashboard-first .status-box .content {
+    position: absolute;
+    top: 33%;
+    left: 5%;
     margin-left: 20px;
     width: 100%;
 
     font-size: 40px;
     font-weight: 600;
-    color: #fff;
+    color: darkgray;
 }
 
 /** 대시보드 상단, 카운트 값 */
 .admin-manager-container .dashboard-first .status-box .count {
-    margin-left: 50px;
-    width: 100%;
-    font-size: 60px;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+
+    font-size: 70px;
     font-weight: 400;
 
     color: #fff;
+    z-index:10;
 }
 
 
