--- a/src/pages/admin/component/AdminManager.css
+++ b/src/pages/admin/component/AdminManager.css
@@ -8,211 +8,38 @@
     border: 3px solid red;
 }
 
-.admin-manager-container div {
+
+.admin-manager-container .cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
 }
 
-.admin-manager-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-
-    padding: 50px;
+.admin-manager-container .card-single {
+    background: var(--white);
+    padding: 1rem;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    border-radius: 2px;
 }
 
-.admin-manager-container .dashboard-first {
-    width: 100%;
-    height: 25vh;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.card-single .card-flex {
+    display: grid;
+    grid-template-columns: 70% auto;
     align-items: center;
 }
 
-/** 대시보드 첫 번째, 상태 박스*/
-.admin-manager-container .dashboard-first .status-box {
-    position: relative;
-    margin: 20px 30px;
-    width: 100%;
-    height: 100%;
-
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: start;
-
-    
-
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1),
-    0 0 10px 10px rgba(0, 0, 0, 0.3),
-    inset 0 10px 10px rgba(0, 0, 0, 0.4);
-
-    cursor: pointer;
+.card-single .card-flex .card-head span {
+    display: block;
+    text-transform: uppercase;
+    color: #555;
+    font-size: .9rem;
 }
 
-.admin-manager-container .dashboard-first .status-box:nth-child(1) {
-    background: linear-gradient(to bottom right, var(--black-color), var(--red-color) ,red);
+.card-info h2 {
+    font-size: 2.2rem;
+    color: #333;
 }
 
-.admin-manager-container .dashboard-first .status-box:nth-child(2) {
-    background: linear-gradient(to bottom right, var(--black-color), #7c86b6, blue);
+.card-chart svg {
+    font-size: 5rem;
 }
-
-.admin-manager-container .dashboard-first .status-box:nth-child(3) {
-    background: linear-gradient(to bottom right, var(--black-color), #59b678, green);
-}
-
-.admin-manager-container .dashboard-first .status-box:nth-child(4) {
-    background: linear-gradient(to bottom right, var(--black-color), #a04dbb, purple);
-}
-
-.admin-manager-container .dashboard-first .status-box .status-first {
-    width: 100%;
-    height: 60%;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    
-}
-
-.admin-manager-container .dashboard-first .status-box .icon {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    padding: 10px;
-    width: 30%;
-    height: 30%;
-
-    
-    background-size: 80% 80%;
-    background-repeat: no-repeat;
-    background-position: center;
-
-}
-
-.admin-manager-container .dashboard-first .status-box:nth-child(1) .icon {
-    background-image: url('../../../assets/icon/user-white.png');
-}
-.admin-manager-container .dashboard-first .status-box:nth-child(2) .icon {
-    background-image: url('../../../assets/icon/dollar.png');
-}
-.admin-manager-container .dashboard-first .status-box:nth-child(3) .icon {
-    background-image: url('../../../assets/icon/meter.png');
-}
-.admin-manager-container .dashboard-first .status-box:nth-child(4) .icon {
-    background-image: url('../../../assets/icon/tv.png');
-}
-
-
-.admin-manager-container .dashboard-first .status-box .content {
-    position: absolute;
-    top: 33%;
-    left: 5%;
-    margin-left: 20px;
-    width: 100%;
-
-    font-size: 40px;
-    font-weight: 600;
-    color: darkgray;
-}
-
-/** 대시보드 상단, 카운트 값 */
-.admin-manager-container .dashboard-first .status-box .count {
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
-
-    font-size: 70px;
-    font-weight: 400;
-
-    color: #fff;
-    z-index:10;
-}
-
-
-
-
-
-.admin-manager-container .dashboard-first .status-box .status-second {
-    width: 100%;
-    height: 40%;
-}
-
-
-
-
-
-.admin-manager-container .dashboard-second {
-    margin-top: 30px;
-    width: 100%;
-    height: 30vh;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.admin-manager-container .dashboard-second .graf-box {
-    margin: 20px;
-    width: 100%;
-    height: 100%;
-
-    border: 3px solid blue;
-}
-
-
-.admin-manager-container .dashboard-third {
-    margin-top: 30px;
-    width: 100%;
-    height: 30vh;
-
-    border-radius: 15px;
-
-    background-color: var(--black-color);
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.admin-manager-container .dashboard-third .row-box {
-    margin-top: 10px;
-    padding: 20px;
-    width: 100%;
-    height: 33%;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.admin-manager-container .dashboard-third .row-box div {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-
-    font-size: 20px;
-    color: #fff;
-}
-
-.admin-manager-container .dashboard-third .row-box div .icon {
-    margin-right: 15px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-image: url('../../../assets/icon/user-white.png');
-    background-color: green;
-    background-size: 80% 80%;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
