--- a/src/pages/admin/component/AdminManager.css
+++ b/src/pages/admin/component/AdminManager.css
@@ -9,6 +9,7 @@
 }
 
 
+/** 카드 관리 */
 .admin-manager-container .cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -42,4 +43,118 @@
 
 .card-chart svg {
     font-size: 5rem;
+}
+
+
+/** 차트 관리 */
+.admin-manager-container .status-card {
+    position: relative;
+    width: 250px;
+    background: linear-gradient(0deg, #1b1b1b, #222, #1b1b1b);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    border-radius: 4px;
+    text-align: center;
+    overflow: hidden;
+    transition: 0.5s;
+}
+
+.admin-manager-container .status-card:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, .03);
+    pointer-events: none;
+    z-index: 1;
+}
+
+.status-card .percent {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    box-shadow: inset 0 0 50px #000;
+    background: #222;
+    z-index: 1000;
+}
+
+.status-card .percent .number {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.status-card .percent .number h2 {
+    color: #777;
+    font-weight: 700;
+    font-size: 40px;
+    transition: 0.5s;
+}
+
+.admin-manager-container .status-card:hover .percent .number h2 {
+    color: #fff;
+    font-size: 60px;
+}
+
+.admin-manager-container .status-card .percent .number h2 span {
+    font-size: 24px;
+    color: #777;
+    transition: 0.5s;
+}
+
+.admin-manager-container .status-card:hover .percent .number h2 span {
+    color: #fff;
+}
+
+.admin-manager-container .status-card .text {
+    position: relative;
+    color: #777;
+    margin-top: 20px;
+    font-weight: 700;
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: 0.5s;
+}
+
+.admin-manager-container .status-card:hover .text {
+    color: #fff;
+}
+
+.admin-manager-container .status-card svg {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    z-index: 1000;
+}
+
+.admin-manager-container .status-card svg circle {
+    width: 100%;
+    height: 100%;
+    fill: none;
+    stroke: #191919;
+    stroke-width: 10;
+    stroke-linecap: round;
+    transform: translate(5px, 5px);
+}
+
+.admin-manager-container .status-card svg circle:nth-child(2) {
+    stroke-dasharray: 440;
+    stroke-dashoffset: 440;
+}
+
+.admin-manager-container .status-card svg circle:nth-child(2) {
+    stroke-dashoffset: calc(440 - (440 *  90) / 100);
+    stroke: #00ff43;
 }
